feat: implementa endpoint criação de photo
- Cria a entidade Photo e testes unitários.
- Cria Repository e testes de integração.
- Adiciona dtos de input e output
- Adiciona a criação da tabela de photos aos scripts de migração
- Implementa handler e usecase de photos
- Atualiza docs no swagger
- Cria arquivo photo.http para testes de requests.
- Adiciona o diretorio de upload ao .gitignore
